layout issue fixed

--- a/src/styles/Testimonials.css
+++ b/src/styles/Testimonials.css
@@ -1,4 +1,4 @@
-.library-page-container .sample-container {
-    flex-direction: column !important;
+.sample-container.sample-container-testimonial {
+    flex-direction: column;
     gap: 2vw
 }  
